--- a/week6/assignment.html
+++ b/week6/assignment.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Assignment 6 | Advanced GIS</title>
-        <link href='http://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
-        <link href="../style.css" rel="stylesheet" />
+        <link href='https://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
+        <link href="../css/pages.css" rel="stylesheet" type="text/css" />
+        <link href="../css/style.css" rel="stylesheet" />
     </head>
     <body>
         <main>
@@ -28,24 +29,21 @@
 
         <section>
             <h2>Part 2: Improve your HTML page from Assignment 5</h2>
-            <p>Using your page from <a href="../week5/assignment.html">Assignment 5</a> (Part 2), add CSS to style it. While I strongly support you using templates from sites such as <a href="https://templated.co/">Templated</a> in the future, please write your own CSS from scratch for this assignment. Consider fonts, colors, and positions when making your changes. Use at least three selectors, and select based on your elements' classes for at least one. The styles should be in a <code>&lt;style&gt;</code> element in the <code>&lt;head&gt;</code> of your document, like this:</p>
+            <p>Using your page from Assignment 5 (Part 2), add CSS to style it. While I strongly support you using site builders and templates from sites such as <a href="https://templated.co/">Templated</a> in the future, please write your own CSS from scratch for this assignment. Consider fonts, colors, and positions when making your changes. Use at least three selectors, and select based on your elements' classes for at least one. The styles should be in a CSS file linked in the <code>&lt;head&gt;</code> of your document, like this:</p>
             <pre><code>&lt;!doctype html&gt;
 &lt;html&gt;
-    &lt;head&gt;
-        &lt;style&gt;
-            (your styles here)
-        &lt;/style&gt;
-    &lt;/head&gt;
+    &lt;head&gt;<br />    &nbsp;&nbsp;&nbsp; &lt;link rel="stylesheet" href="/styles.css"&gt;<br />    &lt;/head&gt;
     &lt;body&gt;
     &lt;/body&gt;
-&lt;/html&gt;</code></pre>
-            <p>Put the styled page online using <a href="https://pages.github.com/">GitHub Pages</a>. Please organize your GitHub Pages repository and put the page for this assignment in a new folder, for example named <strong>assignment-6</strong>.</p>
+&lt;/html&gt;
+            </code></pre>
+            <p>Put the styled page online using Glitch.</p>
         </section>
 
         <section>
             <h2>Submitting your work</h2>
             <p>Submit a link to the map you edited in Part 1 and a link to the page you posted online for Part 2.</p>
-            <p>You may optionally choose to include a short paragraph response or summary of your work.</p>
+            <p>Please include a short paragraph summary of your work.</p>
         </section>
 
         <footer>
