--- a/week6/index.html
+++ b/week6/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-        <link href="http://fonts.googleapis.com/css?family=Arvo|Alegreya+Sans" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Arvo|Alegreya+Sans" rel="stylesheet" type="text/css">
 
         <link href="../css/pig.css" rel="stylesheet" type="text/css" />
         <link href="../css/base.css" rel="stylesheet" />
@@ -26,12 +26,60 @@
             <p>Class 6</p>
         </div>
 
-        <div class="slide" style="background-image: url(img/assignment-gaurav-1.png);">
-            <a class="source" href="https://thenewschool.carto.com/u/guptg729/builder/518842a0-ff0b-11e6-a88b-0e05a8b3e3d7/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B40.54406959045767%2C-74.46533203125%5D%2C%22sw%22%3A%5B41.02394530775749%2C-73.45458984375%5D%7D%2C%22widgets%22%3A%7B%22df285be0-afdf-4337-958a-8d2b97951193%22%3A%7B%22normalized%22%3Atrue%7D%7D%7D">Gaurav</a>
+        <div class="slide" style="background-image: url(img/assignment-eduarda.png);">
+            <a class="source" href="https://maddening-ocean.glitch.me/">Eduarda</a>
         </div>
 
-        <div class="slide" style="background-image: url(img/assignment-ashley.png);">
-            <a class="source" href="https://mooring08.github.io/index.html">Ashley</a>
+        <div class="slide" style="background-image: url(img/assignment-sarah.png);">
+            <a class="source" href="https://impossible-piper.glitch.me/">Sarah</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/readings-macleans-syrian-refugees.png);">
+            <a class="source" href="http://www.macleans.ca/news/canada/true-north-refugees-where-25000-syrians-have-settled-in-canada/">source</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/readings-panorama-foreign-born.png);">
+            <a class="source" href="http://dsl.richmond.edu/panorama/foreignborn/#decade=2010&county=G3200030">source</a>
+        </div>
+
+        <div class="slide intermission"></div>
+
+        <div class="slide" style="background-image: url(img/final-projects-schedule.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/final-projects-schedule.png);">
+            <h2>final project proposals are due March 7th</h2>
+        </div>
+
+        <div class="slide">
+            <h2>how I will look at your project:</h2>
+        </div>
+
+        <div class="slide">
+            <h2>does it use techniques we talked about in class?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>does it work?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>is it substantial?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>is it legible and well designed?</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/final-projects-schedule.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/final-projects-schedule.png);">
+            <h2>you will set a milestone due April 18th</h2>
+        </div>
+
+        <div class="slide">
+            <h2>groups: please submit one proposal and clearly delineate who will be working on which parts</h2>
         </div>
 
         <div class="slide intermission"></div>
@@ -70,31 +118,37 @@
             <h2><code>target="_blank"</code></h2>
         </div>
 
-        <div class="slide">
-            <h2>organize your GitHub Pages</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/github-organize.png);">
+        <div class="slide" style="background-image: url(img/copy-paste.gif);">
+            <h2>copy paste is <em>recommended</em></h2>
         </div>
 
         <div class="slide">
-            <h2>when sharing code with me it's helpful to put it online</h2>
+            <h2>copy paste (with your customizations) is <em>recommended</em></h2>
         </div>
 
-        <div class="slide" style="background-image: url(img/codepen.png);">
-            <a class="source" href="http://codepen.io/ebrelsford/pen/rxXgdp/?editors=1000">codepen.io</a>
+        <div class="slide" style="background-image: url(img/codecademy-html.png);">
+            <h2>learn more here</h2>
+            <a class="source" href="http://www.codecademy.com/tracks/web">codecademy.com/tracks/web</a>
         </div>
 
-        <div class="slide" style="background-image: url(img/jsbin.png);">
-            <a class="source" href="http://jsbin.com/kitiqivesa/edit?html,output">jsbin.com</a>
+        <div class="slide" style="background-image: url(img/shayhowe.png);">
+            <h2>and here</h2>
+            <a href="http://learn.shayhowe.com/html-css">learn.shayhowe.com/html-css</a>
         </div>
 
-        <div class="slide">
-            <h2>neither of these is suitable for publishing a page, just for sharing snippets</h2>
+        <div class="slide" style="background-image: url(img/w3schools.png);">
+            <h2 style="margin-top: 175px;">use with caution</h2>
         </div>
 
+        <div class="slide" style="background-image: url(img/mdn.png);">
+            <h2 style="margin-top: 275px;">recommended</h2>
+            <a href="https://developer.mozilla.org/en-US/" class="source">developer.mozilla.org</a>
+        </div>
 
-        <div class="slide intermission"></div>
+        <div class="slide" style="background-image: url(img/css-tricks.png);">
+            <h2 style="margin-top: 275px;">recommended</h2>
+            <a href="https://css-tricks.com/" class="source">css-tricks.com</a>
+        </div>
 
         <div class="slide">
             <h1>CSS</h1>
@@ -119,7 +173,7 @@
         </div>
 
         <div class="slide">
-            <h2>2. It usually goes in the <code>head</code> of your document</h2>
+            <h2>2. It usually goes in a .css file</h2>
         </div>
 
         <div class="slide">
@@ -134,7 +188,7 @@
 
         <div class="slide">
             <h2>1. CartoCSS</h2>
-            <pre><code>#bids {
+            <pre><code>#layer {
     line-color: #ae8;
     line-width: 0.5;
     polygon-opacity: 1;
@@ -179,11 +233,12 @@
         </div>
 
         <div class="slide">
-            <h2>in the <code>head</code>!</h2>
+            <h2>in a .css file</h2>
         </div>
 
         <div class="slide">
-            <h2>in the <code>head</code>, and in a <code>style</code> element</h2>
+            <h2>then load it in the <code>head</code></h2>
+            <pre><code>&lt;link rel="stylesheet" href="styles.css"/&gt;</code></pre>
         </div>
 
         <div class="slide">
@@ -200,23 +255,7 @@
             <pre style="font-size: 50px; line-height: 50px;"><code>&lt;!doctype html&gt;
 &lt;html&gt;
     &lt;head&gt;
-        &lt;style&gt;
-        &lt;/style&gt;
-    &lt;/head&gt;
-    &lt;body&gt;
-    &lt;/body&gt;
-&lt;/html&gt;</code></pre>
-        </div>
-
-        <div class="slide">
-            <pre style="font-size: 50px; line-height: 50px;"><code>&lt;!doctype html&gt;
-&lt;html&gt;
-    &lt;head&gt;
-        &lt;style&gt;
-            p {
-                font-size: 35px;
-            }
-        &lt;/style&gt;
+        &lt;link rel="stylesheet" href="styles.css"/&gt;
     &lt;/head&gt;
     &lt;body&gt;
     &lt;/body&gt;
@@ -447,11 +486,11 @@
         </div>
 
         <div class="slide">
-            <h2>"class is in room 605"</h2>
+            <h2>"class is in room 1109"</h2>
         </div>
 
         <div class="slide">
-            <h2>"class is in 6 E 16th St, floor 6, room 605"</h2>
+            <h2>"class is in 6 E 16th St, floor 11, room 1109"</h2>
         </div>
 
         <div class="slide">
@@ -611,10 +650,6 @@ a {
             <p>so if your styles aren't working when you think they should be, make their selectors more specific</p>
         </div>
 
-        <div class="slide" style="background-image: url(img/css-cascade.gif);">
-            <a href="https://soma.sbcc.edu/users/ajarabo/intro_Multimedia/what_is_CSS.htm" class="source">source</a>
-        </div>
-
         <div class="slide intermission"></div>
 
         <div class="slide" style="background-image: url(img/carto-legend-1.png);">
@@ -624,6 +659,18 @@ a {
         </div>
 
         <div class="slide" style="background-image: url(img/carto-legend-3.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-style-popup-1.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-style-popup-2.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-style-popup-3.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-style-popup-4.png);">
         </div>
 
         <div class="slide">
@@ -682,24 +729,8 @@ a {
             <h2>making elements sit side-by-side</h2>
         </div>
 
-        <div class="slide">
-            <h2>bootstrap</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/bootstrap.png);">
-            <a href="http://getbootstrap.com/">
-                getbootstrap.com
-            </a>
-        </div>
-
-        <div class="slide">
-            <h2>bootstrap can make things like buttons and columns quick and easy</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/two-columns.png);">
-            <a href="http://jsbin.com/suqobu/edit?html,output">
-                quick example using bootstrap
-            </a>
+        <div class="slide" style="background-image: url(img/css.gif);">
+            <h2>please get in touch when you're having issues with it!</h2>
         </div>
 
         <div class="slide">
