--- a/week6/inclass.html
+++ b/week6/inclass.html
@@ -44,11 +44,11 @@
             <section>
                 <h2>Part 2: Add CSS to a webpage</h2>
                 <ol>
-                    <li>Download <a href="inclass-style.html">this HTML page</a> and open it in your code editor and your browser.</li>
-                    <li>Let's add some style. In the <code>&lt;style&gt;</code> element, add a line after <pre><code>/* Your styles go here */</code></pre>
+                    <li>Open <a href="https://glitch.com/edit/#!/carto-overlay?path=index.html">this Glitch project</a> and "remix" it in your account by clicking on the project name, then <strong>Remix This</strong>.</li>
+                    <li>Let's add some style. In the <code>styles.css</code> file, add a line after <pre><code>/* Your styles go here */</code></pre>
                         and paste the following:
                         <pre><code>p {
-    margin-top: 100px;
+  margin-top: 100px;
 }</code></pre>
                         Refresh the page in your browser. There should now be much more room between paragraphs. We selected the paragraph elements (<code>p</code>) and set the <code>margin-top</code> property to <code>100px</code>.
 
@@ -58,7 +58,7 @@
                     <li>
                         CSS can do much more than select all elements of a type and style those. For example, notice that there are a few <code>span</code> elements in the HTML we're working with. They have been invisible so far because <code>span</code> elements have no style by default. Let's style some of them now by adding a new statement:
                         <pre><code>.sign-label {
-    color: red;
+  color: red;
 }</code></pre>
                         <p>
                         Why did we use <code>.sign-label</code> for the selector instead of <code>span</code>? Because you generally don't want to style all <code>span</code> elements on a page, and in this case we only wanted to style the ones that are of class <code>sign-label</code>.
@@ -84,22 +84,18 @@
                     <li>Open the legend for the map, creating a new legend if there isn't one yet.</li>
                     <li>Edit the code for the legend by flipping the <strong>HTML</strong> switch.</li>
                     <li>
-                        You can style legends and pop-ups by adding a <code>style</code> attribute to the element you want to style (<strong>inline</strong>). If the original legend was:
-                        <pre><code>&lt;div class='cartodb-legend custom'&gt;
-    &lt;li&gt;
-        &lt;div class="bullet" style="background:#fb9a99"&gt;&lt;/div&gt;
-        graffiti report
-    &lt;/li&gt;
-&lt;/div&gt;</code></pre>
+                        You can style legends and pop-ups by adding a <code>style</code> attribute to the element you want to style (<strong>inline</strong>). If the original legend contained:
+                        <pre><code>&lt;li class="Legend-categoryListItem u-flex u-alignCenter"&gt;
+    &lt;span class="Legend-categoryCircle" style="opacity:1; background: #5F4690;"&gt;&lt;/span&gt;
+    &lt;p class="Legend-categoryTitle CDB-Text CDB-Size-small u-upperCase u-ellipsis" title="Adult"&gt;Adult&lt;/p&gt;
+&lt;/li&gt;</code></pre>
                         <p>then you can change the bullet's style by editing the <code>style</code> attribute:</p>
-                        <pre><code>&lt;div class='cartodb-legend custom'&gt;
-    &lt;li&gt;
-        &lt;div class="bullet" style="background: blue; width: 20px;"&gt;&lt;/div&gt;
-        graffiti report
-    &lt;/li&gt;
-&lt;/div&gt;</code></pre>
+                        <pre><code>&lt;li class="Legend-categoryListItem u-flex u-alignCenter"&gt;
+    &lt;span class="Legend-categoryCircle" style="opacity:1; background: #5F4690; <strong>width: 20px;</strong>"&gt;&lt;/span&gt;
+    &lt;p class="Legend-categoryTitle CDB-Text CDB-Size-small u-upperCase u-ellipsis" title="Adult"&gt;Adult&lt;/p&gt;
+&lt;/li&gt;</code></pre>
                     </li>
-                    <li>Unfortunately, you cannot add a <code>style</code> element to legends and pop-ups in Carto. This means you cannot use selectors to style multiple elements at once. If you want full control over the style of legends and pop-ups, you'll have to use JavaScript as we will next week.</li>
+                    <li>Unfortunately, you cannot use selectors in Carto to style multiple elements at once. If you want full control over the style of legends and pop-ups, you'll have to use JavaScript as we will next week.</li>
                     <li>Experiment a bit more with styling both legends and pop-ups in Carto. You can use developer tools while you do this if you find it useful.</li>
                 </ol>
             </section>
