--- a/week6/inclass.html
+++ b/week6/inclass.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>In-class Excercise | Advanced GIS</title>
+        <title>In-class Exercise | Advanced GIS</title>
         <link href="../style.css" rel="stylesheet" />
     </head>
     <body>
         <main>
             <header>
                 <a href="..">Advanced GIS</a>
-                <h1>In-class Excercise: CSS</h1>
+                <h1>In-class Exercise: CSS</h1>
             </header>
 
             <section>
