--- a/week6/inclass.html
+++ b/week6/inclass.html
@@ -50,10 +50,10 @@
                         <pre><code>p {
   margin-top: 100px;
 }</code></pre>
-                        Refresh the page in your browser. There should now be much more room between paragraphs. We selected the paragraph elements (<code>p</code>) and set the <code>margin-top</code> property to <code>100px</code>.
+                        There should now be much more room between paragraphs. We selected the paragraph elements (<code>p</code>) and set the <code>margin-top</code> property to <code>100px</code>.
 
                     </li>
-                    <li>Style all the links (<code>a</code> elements) by adding a CSS statement after the statement we just added and setting properties as you like. I recommend <code><a href="https://css-tricks.com/almanac/properties/t/color/">color</a></code>, <code><a href="https://css-tricks.com/almanac/properties/b/background-color/">background-color</a></code>, and <code><a href="https://css-tricks.com/almanac/properties/t/text-decoration/">text-decoration</a></code> for starters.</li>
+                    <li>Style all the links (<code>a</code> elements) by adding a CSS statement after the statement we just added and setting properties as you like. I recommend <code><a href="https://css-tricks.com/almanac/properties/c/color/">color</a></code>, <code><a href="https://css-tricks.com/almanac/properties/b/background-color/">background-color</a></code>, and <code><a href="https://css-tricks.com/almanac/properties/t/text-decoration/">text-decoration</a></code> for starters.</li>
                     <li>Change the font family for the entire page by modifying the <code>font-family</code> for the <code>body</code>. Read more about this and see an example at <a href="https://css-tricks.com/almanac/properties/f/font-family/">CSS-Tricks</a>.</li>
                     <li>
                         CSS can do much more than select all elements of a type and style those. For example, notice that there are a few <code>span</code> elements in the HTML we're working with. They have been invisible so far because <code>span</code> elements have no style by default. Let's style some of them now by adding a new statement:
