--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
                     <h3>Week 7: JavaScript</h3>
                     <section class="slides">
@@ -193,17 +192,13 @@
                     <section class="materials">
                         <h4>materials</h4>
                         <ul>
-                            <li><a href="week7/inclass-embed.html">Carto.js template</a></li>
-                            <li><a href="week7/inclass-button.html">Carto.js: buttons</a></li>
-                            <li><a href="week7/inclass-filter.html">Carto.js: dropdown</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-single-layer">Carto.js template</a></li>
                         </ul>
                     </section>
                     <section class="videos">
                         <h4>videos</h4>
                         <ul>
-                            <li><a href="https://www.youtube.com/watch?v=pDpPYYLUvUs">CARTO: JavaScript</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=Fc4wkJg8Zrs">GitHub Pages folders</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=sC7_zQDr21o">Carto.js</a></li>
                         </ul>
                     </section>
                     <section class="assignment">
@@ -213,6 +208,7 @@
                     </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 8: Guest Speaker / Lab</h3>
                     <p>No materials</p>
@@ -233,10 +229,18 @@
                     <section class="materials">
                         <h4>materials</h4>
                         <ul>
-                            <li><a href="https://gist.github.com/ebrelsford/3cfc899af2e4f36ed0ca62bada5f2226">Carto.js: potential issues and workarounds</a></li>
+                            <li><a href="week7/inclass-button.html">Carto.js: buttons</a></li>
+                            <li><a href="week7/inclass-filter.html">Carto.js: dropdown</a></li>
                             <li><a href="http://jsbin.com/betilu/edit?html,output">Carto.js: single checkbox</a></li>
                             <li><a href="http://jsbin.com/xohituy/edit?html,output">Carto.js: two checkboxes</a></li>
                             <li><a href="http://jsbin.com/dinugiw/edit?html,output">Carto.js: more than two checkboxes</a></li>
+                        </ul>
+                    </section>
+                    <section class="videos">
+                        <h4>videos</h4>
+                        <ul>
+                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=Fc4wkJg8Zrs">GitHub Pages folders</a></li>
                         </ul>
                     </section>
                     <section class="assignment">
