--- a/index.html
+++ b/index.html
@@ -208,51 +208,57 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
-                    <h3>Week 8: Guest Speaker / Lab</h3>
-                    <p>No materials</p>
-                </section>
-
-                <section>
-                    <h3>Week 9: JavaScript part 2</h3>
+                    <h3>Week 8: JavaScript part 2</h3>
                     <section class="slides">
                         <h4>
-                            <a href="week9">slides</a>
+                            <a href="week8">slides</a>
                         </h4>
                     </section>
                     <section class="in-class">
                         <h4>
-                            <a href="week9/inclass.html">in-class exercises</a>
+                            <a href="week8/inclass.html">in-class exercises</a>
                         </h4>
                     </section>
                     <section class="materials">
                         <h4>materials</h4>
                         <ul>
-                            <li><a href="week7/inclass-button.html">Carto.js: buttons</a></li>
-                            <li><a href="week7/inclass-filter.html">Carto.js: dropdown</a></li>
-                            <li><a href="http://jsbin.com/betilu/edit?html,output">Carto.js: single checkbox</a></li>
-                            <li><a href="http://jsbin.com/xohituy/edit?html,output">Carto.js: two checkboxes</a></li>
-                            <li><a href="http://jsbin.com/dinugiw/edit?html,output">Carto.js: more than two checkboxes</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-custom-legend">Carto.js custom legend</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-popups">Carto.js with popups</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-two-layers">Carto.js with two layers</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-buttons">Carto.js filter with buttons</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-text-input">Carto.js filter with text input</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-dropdown">Carto.js filter with dropdown</a></li>
+                            <li>Coming soon:
+                                <ul>
+                                    <li>Carto.js filter with checkboxes</li>
+                                    <li>Carto.js put data in sidebar rather than popups</li>
+                                </ul>
+                            </li>
                         </ul>
                     </section>
                     <section class="videos">
                         <h4>videos</h4>
                         <ul>
-                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=Fc4wkJg8Zrs">GitHub Pages folders</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=_hXvyk_w5Ck">Carto.js dropdowns</a></li>
                         </ul>
                     </section>
                     <section class="assignment">
                         <h4>
-                            <a href="week9/assignment.html">assignment</a>
+                            <a href="week8/assignment.html">assignment</a>
                         </h4>
                     </section>
+
                 </section>
 
+                <!--
+                <section></section>
+
                 <section>
-                    <h3>Week 11: Guest Speaker / Lab</h3>
+                    <h3>Week 10: Guest Speaker / Lab</h3>
                     <p>No materials</p>
+                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=Fc4wkJg8Zrs">GitHub Pages folders</a></li>
                 </section>
 
                 <section>
